--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 .Container {
     width: 100%;
     height: 10%;
-    margin: 1rem;
+    margin-top: 1rem;
     background-color: rgba(250, 235, 215, 0);
     display: flex;
     justify-content: center;
