--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -22,6 +22,13 @@
   margin: 2px;
   padding: 20px;
 }
+.footer-logo{
+  /* object-fit: fill; */
+  outline: 2px solid red;
+  width: 15rem;
+  height: auto;
+
+}
 
 .Footer_col1 {
   flex: 1; /* Make the first column take up 1/3 of the available space */
