--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,22 +1,46 @@
 * {
-    /* outline: 2px solid red; */
     margin: 0;
+    /* outline: 2px solid red; */
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
+
+
+.logo {
+    max-width: 10%;
+
+    max-height: 10%; /* Set a maximum width for the logo container */
+    overflow: hidden; /* Hide content that exceeds the container's width */
+  }
+  
+  .logo img {
+    margin: auto;
+    width: 100%; /* Make the image inside the logo container responsive */
+    height: auto;
+    /* object-fit: fill; Maintain the image's aspect ratio */
+  }
+
+  .SignUp img {
+    margin: auto;
+    width: 50%; /* Make the image inside the logo container responsive */
+    height: auto;
+
+  }
 .Container {
+    /* outline: 2px solid red; */
     width: 100%;
     height: 10%;
     margin-top: 1rem;
     background-color: rgba(250, 235, 215, 0);
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
 }
 
 .Navbar {
     display: flex;
+    /* outline: 2px solid green; */
     box-shadow: 0 5px 5px -5px black;
     border-radius: 50px;
     background-color: rgb(255, 240, 240);
@@ -59,3 +83,39 @@ li:hover::after {
     top: 50%;
     opacity: 1;
 }
+
+
+
+.SignUp{
+    /* outline: 3px solid green; */
+    margin-right: 1rem;
+    /* margin-left: 12rem; */
+    float: right;
+    max-width: 10%;
+
+    max-height: 10%; /* Set a maximum width for the logo container */
+    overflow: hidden; 
+}
+
+.SignUp .icon {
+    /* position: relative; */
+    background-color: #e3e3e3c5;
+    border-radius: 60%;
+    display: flex;
+    float: right;
+    margin: 1rem;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+    font-size: 2rem;
+    /* display: inline-block; */
+  
+    cursor: pointer;
+    /* transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55); */
+    color: #333;
+  }
+  
+
+
